--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 html {
     background-color: #5f45bb;
-    background-image: linear-gradient(to bottom right, #180cac, #d054e4);
+    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
     color: #fff;
     font-family: "Quicksand", sans-serif;
     font-size: 16px;
